--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Git 초기화</h1>
+    <ul>
+        <li>일시 : 21년 5월 8일 ~ 23일</li>
+        <li>장소 : 전주정보문화산업진흥원</li>
+        <li>내용 : Sass기초 수업</li>
+    </ul>
 </body>
 </html>
